syntax = "proto3";

option go_package="interface/pbs";

//cd ~/Documents/vscode/grpc_up_and_running/ecommerce
//protoc --go_out=. --go-grpc_out=. interface/protos/*
service ProductInfo {
    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
}

message ProductID {
    string value = 1;
}
